--- a/index.html
+++ b/index.html
@@ -6,20 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="catpaw.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-        </style>
+    <link href='https://fonts.googleapis.com/css?family=Indie Flower' rel='stylesheet'>
     <link rel="stylesheet" href="index.css">
     <title>Cat-It</title>
 </head>
 <body>
      <div class="container">
-        <div class="panel-body">
+        <div class="gamespace">
             <h1>Cat-It!</h1>
             <div class="row">
                 <button class="btn btn-info btn-lg" id='startButton' onClick="startGame()">Start</button>
             </div>
-            
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="score">High Score: <span id="highScore">0</span></h5>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="score">Your Score: <span id="score">0</span></h5>
+                        </div>
+                        <div id="timer"></div>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                </div>
+
+            </div>
+
         </div>
     </div>
     <br><br>
