--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="catpaw.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Indie Flower' rel='stylesheet'>
-    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets\css\style.css">
     <title>Cat-It</title>
 </head>
-<body>
-     <div class="container">
+
+<body onload='loadModal()'>
+    <br>
+    <br>
+    <br>
+    <div class="container">
         <div class="gamespace">
             <h1>Cat-It!</h1>
+            <br>
+            <br>
             <div class="row">
                 <button class="btn btn-info btn-lg" id='startButton' onClick="startGame()">Start</button>
             </div>
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-
+                    <br><br>
                     <div class="row">
                         <div class="col-md-6">
                             <h5 class="score">High Score: <span id="highScore">0</span></h5>
@@ -28,18 +36,83 @@
                         <div class="col-md-6">
                             <h5 class="score">Your Score: <span id="score">0</span></h5>
                         </div>
-                        <div id="timer"></div>
                     </div>
                 </div>
                 <div class="col-sm-2">
                 </div>
-
+                <br>
+            </div>
+            <h3 id="loss" class="loss">You Lost! Press start to play again!</h3>
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 game-buttons">
+                </div>
             </div>
 
+            <!--Game Buttons-->
+            <div class="row">
+                <div class="col-sm-3">
+                    <br>
+                    <button id="strokeIt" onClick="gameButton()" class="btn btn-warning btn-lg disable"
+                        data-type="Stroke It">Stroke It</button>
+                </div>
+                <div class="col-sm-3">
+                    <br>
+                    <button id="brushIt" onClick="gameButton()" class="btn btn-danger btn-lg disable"
+                        data-type="Brush It">Brush It</button>
+                </div>
+                <div class="col-sm-3">
+                    <br>
+                    <button id="feedIt" onClick="gameButton()" class="btn btn-info btn-lg disable"
+                        data-type="Feed It">Feed It</button>
+                </div>
+                <div class="col-sm-3">
+                    <br>
+                    <button id="playTime" onClick="gameButton()" class="btn btn-primary btn-lg disable"
+                        data-type="Play Time">Play Time</button>
+                </div>
+            </div>
+            <br>
+            <br>
         </div>
     </div>
     <br><br>
 
-    <script type="text/javascript" src="script.js"></script>
-</body>
+    <!--Screen Rotation for Smart Phones-->
+    <div class="modal fade" tabindex="-1" role="dialog" id='rotateScreenModal'>
+        <div class="modal-dialog" role="document">
+            <!--Modal-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" style='text-align: right;'
+                        aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Cat-It!</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
+                        quicker it gets!</p>
+                    <p class='rotate d-md-none'><strong>Turn your device sideways for a better gaming
+                            experience!</strong></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success modal-btn" data-dismiss="modal">Play</button>
+                    <button type="button" class="btn btn-success modal-btn" data-dismiss="modal">High Scores</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="assets\js\script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </html>
