--- a/index.html
+++ b/index.html
@@ -13,117 +13,104 @@
     <!--CDN Links for MDBootstrap 5 (makes the square buttons work)-->
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
     <title>Cat-It</title>
 </head>
 
 <body onload='loadModal()'>
-    <br>
-    <br>
-    <br>
     <div class="container">
-        <div class="gamespace">
-            <h1>Cat-It!</h1>
-            <br>
-            <br>
-            <div class="row">
-                <button class="btn btn-info btn-lg" id='startButton' onClick="startGame()">Start</button>
-            </div>
-            <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-8">
-                    <br><br>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5 class="score">High Score: <span id="highScore">0</span></h5>
-                        </div>
-                        <div class="col-md-6">
-                            <h5 class="score">Your Score: <span id="score">0</span></h5>
-                        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="title">Cat-It!</h1>
+
+                <div class="row">
+
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-8" id="gamespace">
+
+                    </div>
+                    <div class="col-sm-2">
                     </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="row" id="scorespace">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="score">High Score: <span id="highScore">0</span></h5>
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="score">Your Score: <span id="score">0</span></h5>
+                    </div>
+                    <div class="col-md-4">
+                    </div>
                 </div>
-                <br>
-            </div>
-            <h3 id="loss" class="loss">You Lost! Press start to play again!</h3>
-            <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-8 game-buttons">
-                </div>
-            </div>
-
-            <!--Game Buttons-->
-            <div class="row">
-
-                    <button id="strokeIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-sq-responsive"
-                        data-type="Stroke It">Stroke It</button>
-
-
-                    <button id="brushIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-sq-responsive"
-                        data-type="Brush It">Brush It</button>
 
 
 
-                    <button id="feedIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-sq-responsive"
-                        data-type="Feed It">Feed It</button>
+                <!--Game Buttons-->
+                <div class="row">
 
-                    <button id="playTime" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-sq-responsive"
-                        data-type="Play Time">Play Time</button>
+                    <button id="strokeIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-dark btn-sq-responsive" data-type="Stroke It">Stroke It</button>
 
-            </div>
-            <br>
-            <br>
-        </div>
-    </div>
-    <br><br>
 
-    <!--Screen Rotation for Smart Phones-->
-    <div class="modal fade" tabindex="-1" role="dialog" id='instructions'>
-        <div class="modal-dialog" role="document">
-            <!--Modal-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title, ms-auto">Cat-It!</h3>
-                    <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
-                        quicker it gets!</p>
-                    <p class='rotate d-md-none'><strong>Turn your device sideways for a better gaming
-                            experience!</strong></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal">Play</button>
-                    <button type="button" class="btn btn-success modal-btn">High Scores</button>
+                    <button id="brushIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-dark btn-sq-responsive" data-type="Brush It">Brush It</button>
+
+                    <button id="feedIt" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-dark btn-sq-responsive" data-type="Feed It">Feed It</button>
+
+                    <button id="playTime" onClick="gameButton()" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-dark btn-sq-responsive" data-type="Play Time">Play Time</button>
+
+
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- My JavaScript -->
-    <script type="text/javascript" src="assets\js\script.js"></script>
 
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        <!--Screen Rotation for Smart Phones-->
+        <div class="modal fade" tabindex="-1" role="dialog" id='instructions'>
+            <div class="modal-dialog" role="document">
+                <!--Modal-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title, ms-auto">Instructions</h3>
+                        <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
+                            quicker it gets!</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal">Play</button>
+                        <button type="button" class="btn btn-success modal-btn">High Scores</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <!-- My JavaScript -->
+        <script type="text/javascript" src="assets\js\script.js"></script>
 
-    <!-- MDB -->
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+
+        <!-- MDB -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
 
 </html>
