Add functions for resetting game; add high score stored in local storage

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <p>You lose!</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal" id="gameStart">Play</button>
+                        <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal" id="gameStartAgain">Play again?</button>
                     </div>
                 </div>
             </div>
