Add a progress bar and have it count down according to the time left

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                                 <h5 class="score">High Score: <span id="highScore">0</span></h5>
 
                             </div>
+
+                            <div id="myProgress">
+                                <div id="myBar"></div>
+                              </div>
+                              
                             <div class="col-sm-auto ms-auto">
                                 <button id="playTime" data-mdb-button-init data-mdb-ripple-init
                                     class="btn btn-dark btn-sq-responsive" data-type="Play Time">Play Time</button>
