--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets\css\style.css">
-    <!--CDN Links for MDBootstrap 5 (makes the square buttons work)-->
+    <!-- CDN Links for MDBootstrap 5 (makes the square buttons work) -->
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- MDB -->
+    <!-- MDB Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
     <title>Cat-It</title>
 </head>
@@ -26,117 +26,104 @@
 
 
 
-                <div class="row px-0" id="gamespace-row">
+                <div id="gamespace">
+                    <!-- Game Icons -->
+                    <img src="assets\images\petiticon.png" alt="Pet It Icon" class="game-icon" id="petItIcon">
+                    <img src="assets\images\brushiticon.png" alt="Brush It Icon" class="game-icon" id="brushItIcon">
+                    <img src="assets\images\feediticon.png" alt="Feed It Icon" class="game-icon" id="feedItIcon">
+                    <img src="assets\images\playtimeicon.png" alt="Play Time Icon" class="game-icon" id="playTimeIcon">
 
-                    <div class="col-12" id="gamespace">
-                        <!--Game Buttons-->
-                        <div class="row align-items-start buttonsrow">
-                            <div class="col-sm-auto">
-                                <button id="petIt" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-dark btn-sq-responsive" data-type="Pet It">Pet It</button>
-                            </div>
-                            <div class="col-sm-auto ms-auto">
-                                <button id="brushIt" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-dark btn-sq-responsive" data-type="Brush It">Brush It</button>
-                            </div>
-                        </div>
-                        <div class="row" id="spacer"></div>
-                        <div class="row align-items-end buttonsrow">
-                            <div class="col-sm-auto">
-                                <button id="feedIt" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-dark btn-sq-responsive" data-type="Feed It">Feed It</button>
-                            </div>
-                            <div class="col-sm-auto ms-auto">
-                                <h5 class="score">Score: <span id="score">0</span></h5>
-
-                            </div>
-                            <div class="col-sm-auto ms-auto">
-                                <h5 class="score">High Score: <span id="highScore">0</span></h5>
-
-                            </div>
-
-                            <div id="myProgress">
-                                <div id="myBar"></div>
-                              </div>
-                              
-                            <div class="col-sm-auto ms-auto">
-                                <button id="playTime" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-dark btn-sq-responsive" data-type="Play Time">Play Time</button>
-                            </div>
-                        </div>
+                    <!-- Score and High Score -->
+                    <div class="score" id="scorespace">
+                        <h5>Score: <span id="score">0</span></h5>
+                        <h5>High Score: <span id="highScore">0</span></h5>
                     </div>
 
+                    <!-- Progress Bar -->
+                    <div id="myProgress">
+                        <div id="myBar"></div>
+                    </div>
                 </div>
 
             </div>
-
-
-
-
-
         </div>
 
+    </div>
+
+    </div>
 
 
-        <!--Instructions Modal-->
-        <div class="modal fade" tabindex="-1" role="dialog" id='instructions'>
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title, ms-auto">Cat-It!</h1>
-                        <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
-                            quicker it gets!</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-success modal-btn" id="resetHighScore">Reset High Score</button>
-                        <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal" id="gameStart">Play</button>
-                    </div>
-                    
+
+
+
+    </div>
+
+
+
+    <!-- Instructions Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id='instructions'>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title, ms-auto">Cat-It!</h1>
+                    <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
+                        quicker it gets!</p>
+                    <p>On mobile devices, rotate for a better experience!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success modal-btn" id="resetHighScore">Reset High
+                        Score</button>
+                    <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal"
+                        id="gameStart">Play</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Loss Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id='loss'>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title, ms-auto">Cat-It!</h1>
+                    <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>You lose!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success modal-btn" id="resetHighScoreLoss">Reset High
+                        Score</button>
+                    <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal"
+                        id="gameStartAgain">Play again?</button>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- My JavaScript -->
+    <script type="text/javascript" src="assets\js\script.js"></script>
 
-        <!--Loss Modal-->
-        <div class="modal fade" tabindex="-1" role="dialog" id='loss'>
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title, ms-auto">Cat-It!</h1>
-                        <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>You lose!</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-success modal-btn" id="resetHighScoreLoss">Reset High Score</button>
-                        <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal" id="gameStartAgain">Play again?</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- My JavaScript -->
-        <script type="text/javascript" src="assets\js\script.js"></script>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
-        <!-- JQuery -->
-        <script src="https://code.jquery.com/jquery-3.7.1.js"
-            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-
-        <!-- MDB -->
-        <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+    <!-- MDB JS -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
 
 </html>
