Disable clicking outside the modal closing the modal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
     <!-- Instructions Modal -->
-    <div class="modal fade" tabindex="-1" role="dialog" id='instructions'>
+    <div class="modal fade" data-bs-backdrop='static' tabindex="-1" role="dialog" id='instructions'>
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Loss Modal -->
-    <div class="modal fade" tabindex="-1" role="dialog" id='loss'>
+    <div class="modal fade" data-bs-backdrop='static' tabindex="-1" role="dialog" id='loss'>
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
