Adjust stylings for modal on smaller screens

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     
                 </div>
                 <div class="modal-body">
-                    <p>You lose!</p>
+                    <p>The cat lost interest! Maybe next time...</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success modal-btn loss-jpg" id="resetHighScoreLoss" onclick="alert('High Score Reset!')">Reset High
