--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Instructions Modal -->
-    <div class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog" id="instructions">
+    <div class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-modal="true" id="instructions">
   <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Loss Modal -->
-    <div class="modal fade" data-bs-backdrop='static' tabindex="-1" role="dialog" id='loss'>
+    <div class="modal fade" data-bs-backdrop='static' tabindex="-1" role="dialog" aria-modal="true" id='loss'>
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -89,7 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
-    <script src="assets/js/script.js" type="text/javascript"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
