Edit instruction text to make it clearer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
                     <h1 class="modal-title, ms-auto">Cat-It!</h1>
                 </div>
                 <div class="modal-body">
-                    <p>Click the correct icon before the cat loses interest! But be warned... the more you play, the
+                    <p>Listen to the instruction and click the correct icon before the cat loses interest! But be warned... the more you play, the
                         quicker it gets!</p>
-                    <p>On mobile devices, rotate for a better experience!</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success modal-btn loss-jpg" id="resetHighScore"
