--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
                 </div>
                 <div class="modal-body">
                     <p>The cat lost interest! Maybe next time...</p>
+                    <p id="gamescore">Your score: </p>   
+                    <p id="gamehighscore">High score: </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success modal-btn loss-jpg" id="resetHighScoreLoss"
                         onclick="alert('High Score Reset!')">Reset High
                         Score</button>
+                    
                     <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal"
                         id="gameStartAgain">Play again?</button>
+                        
                 </div>
             </div>
         </div>
