Alter modal buttons to match stylings

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         quicker it gets!</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success modal-btn loss-jpg" id="resetHighScore"
+                    <button type="button" class="btn btn-primary modal-btn loss-jpg" id="resetHighScore"
                         onclick="alert('High Score Reset!')">Reset High Score</button>
-                    <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-primary modal-btn" data-bs-dismiss="modal"
                         id="gameStart">Play</button>
                 </div>
 
@@ -75,11 +75,11 @@
                     <p id="gamehighscore">High score: </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success modal-btn loss-jpg" id="resetHighScoreLoss"
+                    <button type="button" class="btn btn-primary modal-btn loss-jpg" id="resetHighScoreLoss"
                         onclick="alert('High Score Reset!')">Reset High
                         Score</button>
                     
-                    <button type="button" class="btn btn-success modal-btn" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-primary modal-btn" data-bs-dismiss="modal"
                         id="gameStartAgain">Play again?</button>
                         
                 </div>
